# mendan

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  justfile  render.yaml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: coverage.yml
front/: package-lock.json  package.json
front/src/: index.tsx
server/: Cargo.toml  justfile
server/entity/: Cargo.toml
server/entity/src/: lib.rs  pre_user.rs  reservation.rs  user.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220702_000001_create_table.rs  m20220702_000001_create_user.rs  m20220702_000002_create_reservation.rs  m20220702_000003_create_pre_user.rs
server/migrations/2022-05-05-091708_create_users/: down.sql  up.sql
server/migrations/2022-05-05-092135_create_reservations/: down.sql  up.sql
server/migrations/2022-05-05-092429_create_pre_users/: down.sql  up.sql
server/src/: app_state.rs  db.rs  lib.rs  main.rs  schema.rs
server/src/controllers/: users.rs
src/: main.rs
