[package]
name = "mendan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.0.0-rc.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
argon2 = "0.4.0"
rand_core = { version = "0.6.3", features = ["std"] }
