[package]
name = "mendan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.1"
actix-redis = { version = "0.11.0", features = ["web"] }
actix-session = "0.6.2"
actix-web = "4.1.0"
argon2 = "0.4.1"
chrono = { version = "0.4.19", features = ["serde"] }
rand_core = { version = "0.6.3", features = ["std"] }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
serde = "1.0.138"
serde_derive = "1.0.138"
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
