[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
sea-orm = { version = "0.8.0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
serde = "1.0.138"
serde_derive = "1.0.138"
serde_json = "1.0.82"