[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "0.8.0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
entity = { path = "../entity" }

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]

[dependencies.sea-orm-migration]
version = "^0.8.0"
